feat(deps): Add environment variables, configuration, DTOs, schemas, and update core application files
This commit introduces several new features including:
- Environment variable setup (`.env.example`).
- Configuration loading mechanism (`src/config/configuration.ts`).
- Data Transfer Objects for chat messages and research documents.
- Mongoose schemas for chat messages and research documents.
- Updates to the main application entry point (`src/main.ts`), controller, module, and service to integrate new features.
- Documentation updates in `API.md` and `README.md`.
- Updates dependency lock files (`bun.lock`, `package-lock.json`, `package.json`).

--- a/package.json
+++ b/package.json
@@ -23,9 +23,14 @@
     "node": ">=20.0.0"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.68.0",
     "@nestjs/common": "^11.0.17",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/swagger": "^11.2.1",
+    "mongoose": "^8.19.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
